--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             
             <nav class="navbar navbar-expand-lg navbar-light ">
                 <div class="container-fluid">
-                    <a><img src="images/img1.png" alt="" width="140px"></a>
+                    <a><img src="images/img1.png" alt="" width="100px"></a>
                     <a class="navbar-brand" href="#"></a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                         data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
@@ -55,6 +55,8 @@
                 <p>
                     Colorful Designs Spark Up Your Style And Can Trigger Different Emotions.
                 </p>
+                <button type="button" class="btn  btn-lg">Explore Now &#x279D;</button>
+
             </div>
             <div class="col-2">
                 <img src="images/img2.png" alt="" >
