--- a/index.html
+++ b/index.html
@@ -75,8 +75,24 @@
             </div>
 
         </div>
+    
+    <!------------------Fearured Categories--------------------------->
+    <div class="categories">
+        <div class="small-container">
+        <div class="row">
+            <div class="col-3">
+                <img src="images/img3.jpg" alt="Error" >
+            </div>
+            <div class="col-3">
+                <img src="images/img4.jpg" alt="Error" >
+            </div>
+            <div class="col-3">
+                <img src="images/img5.jpeg" alt="Error" height="280px" >
+            </div>
+        </div>
     </div>
-
+    </div>
+    </div>
 
     <!-----------------Bootstrap JavaScript plugin--------------------->
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
