--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
         rel="stylesheet">
     <!---------------------Google Font cone Awesome-------------------->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <!---------------------Font Awesome 4 CDN-------------------------->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5.15.3/css/fontawesome.min.css">
 
 
 </head>
@@ -87,11 +89,39 @@
                 <img src="images/img4.jpg" alt="Error" >
             </div>
             <div class="col-3">
-                <img src="images/img5.jpeg" alt="Error" height="280px" >
+                <img src="images/img5.jpeg" alt="Error"  >
             </div>
         </div>
     </div>
     </div>
+    <!------------------Fearured Products--------------------------->
+    <div class="small-container">
+        <h2 class="title">Featured Products</h2>
+        <div class="row">
+            <div class="col-4">
+                <img src="images/img6.webp" alt="Error">
+                <h4>Blue Tshirts</h4>
+                <p>&#8377;900</p>
+            </div>
+            <div class="col-4">
+                <img src="images/img7.jpg" alt="Error">
+                <h4>White Nike Trainers Womens</h4>
+                <p>&#8377;3999</p>
+            </div>
+            <div class="col-4">
+                <img src="images/img8.jpg" alt="Error">
+                <h4>Jockey Mens Narrow Track</h4>
+                <p>&#8377;1100</p>
+            </div>
+            <div class="col-4">
+                <img src="images/img9.jpg" alt="Error">
+                <h4>Allen Solly Red Shirt</h4>
+                <p>&#8377;2000</p>
+            </div>
+        </div>
+    </div>
+
+
     </div>
 
     <!-----------------Bootstrap JavaScript plugin--------------------->
