--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>ThingStore</title>
+    <link href="images/favicon.ico" type="image" rel="icon">
     <!--------------------=BootStrap--------------------------->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-wEmeIV1mKuiNpC+IOBjI7aAzPcEZeedi5yW5f2yOq55WWLwNGmvvx4Um1vskeMj0" crossorigin="anonymous">
@@ -117,6 +118,73 @@
                 <img src="images/img9.jpg" alt="Error">
                 <h4>Allen Solly Red Shirt</h4>
                 <p>&#8377;2000</p>
+            </div>
+        </div>
+        <h2 class="title">Latest Products</h2>
+        <div class="row">
+            <div class="col-4">
+                <img src="images/img6.webp" alt="Error">
+                <h4>Blue Tshirts</h4>
+                <p>&#8377;900</p>
+            </div>
+            <div class="col-4">
+                <img src="images/img7.jpg" alt="Error">
+                <h4>White Nike Trainers Womens</h4>
+                <p>&#8377;3999</p>
+            </div>
+            <div class="col-4">
+                <img src="images/img8.jpg" alt="Error">
+                <h4>Jockey Mens Narrow Track</h4>
+                <p>&#8377;1100</p>
+            </div>
+            <div class="col-4">
+                <img src="images/img9.jpg" alt="Error">
+                <h4>Allen Solly Red Shirt</h4>
+                <p>&#8377;2000</p>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-4">
+                <img src="images/img10.jpg" alt="Error">
+                <h4>Apple Watch Series 6</h4>
+                <p>&#8377;40,000</p>
+            </div>
+            <div class="col-4">
+                <img src="images/img7.jpg" alt="Error">
+                <h4>White Nike Trainers Womens</h4>
+                <p>&#8377;3999</p>
+            </div>
+            <div class="col-4">
+                <img src="images/img16.jpg" alt="Error">
+                <h4>Nike Ankle Socks (3 Pairs)</h4>
+                <p>&#8377;700</p>
+            </div>
+            <div class="col-4">
+                <img src="images/img15.jpg" alt="Error">
+                <h4>Casual Cotton Trouser For Men</h4>
+                <p>&#8377;1200</p>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-4">
+                <img src="images/img14.jpg" alt="Error">
+                <h4>Adidas Shoes</h4>
+                <p>&#8377;2400</p>
+            </div>
+            <div class="col-4">
+                <img src="images/img13.jpeg" alt="Error">
+                <h4>Nike Sleeper</h4>
+                <p>&#8377;1300</p>
+            </div>
+            <div class="col-4">
+                <img src="images/img11.jpg" alt="Error">
+                <h4>Casio G Shock Watch</h4>
+                <p>&#8377;20,000</p>
+            </div>
+            <div class="col-4">
+                <img src="images/img12.jpg" alt="Error">
+                <h4>Track Pant</h4>
+                <p>&#8377;1900</p>
             </div>
         </div>
     </div>
