--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
             <div class="col-4">
                 <img src="images/img6.webp" alt="Error">
                 <h4>Blue Tshirts</h4>
-                <p>&#8377;900</p>
+                <p>&#8377;800</p>
             </div>
             <div class="col-4">
                 <img src="images/img7.jpg" alt="Error">
@@ -123,14 +123,14 @@
         <h2 class="title">Latest Products</h2>
         <div class="row">
             <div class="col-4">
-                <img src="images/img6.webp" alt="Error">
-                <h4>Blue Tshirts</h4>
-                <p>&#8377;900</p>
+                <img src="images/img17.jpg" alt="Error">
+                <h4>Flst Cap</h4>
+                <p>&#8377;800</p>
             </div>
             <div class="col-4">
-                <img src="images/img7.jpg" alt="Error">
-                <h4>White Nike Trainers Womens</h4>
-                <p>&#8377;3999</p>
+                <img src="images/img18.jpg" alt="Error">
+                <h4>Jogging Gym Shorts</h4>
+                <p>&#8377;1000</p>
             </div>
             <div class="col-4">
                 <img src="images/img8.jpg" alt="Error">
