--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
         <div class="row">
             <div class="col-4">
                 <img src="images/img17.jpg" alt="Error">
-                <h4>Flst Cap</h4>
+                <h4>Flat Cap</h4>
                 <p>&#8377;800</p>
             </div>
             <div class="col-4">
@@ -188,8 +188,6 @@
             </div>
         </div>
     </div>
-
-
     </div>
 
     <!-----------------Bootstrap JavaScript plugin--------------------->
