--- a/index.html
+++ b/index.html
@@ -188,6 +188,23 @@
             </div>
         </div>
     </div>
+    <div class="offer">
+        <div class="small-container">
+            <div class="row">
+                <div class="col-2">
+                    <img src="images/img19.jpg" alt="Error">
+                </div>
+                <div class="col-2">
+                    <p>Exclusively Available On ThingStore</p>
+                    <h1>Redmi Smart Band</h1>
+                    <small>If You are looking to buy an adanced smart band for 
+                        your fitness routine or to make your life more convenirnt.
+                        The newly launched redmi smart band.
+                    </small>
+                </div>
+            </div>
+        </div>
+    </div>
     </div>
 
     <!-----------------Bootstrap JavaScript plugin--------------------->
