--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                     <img src="images/img2.png" alt="">
                 </div>
             </div>
-
+        </div>
         </div>
     
     <!------------------Fearured Categories--------------------------->
@@ -201,11 +201,23 @@
                         your fitness routine or to make your life more convenirnt.
                         The newly launched redmi smart band.
                     </small>
+                    <br>
+                    <button type="button" class="btn  btn-lg">Buy Now &#x279D;</button>
                 </div>
             </div>
         </div>
     </div>
-    </div>
+    <!------------------------Testimonial----------------------------->
+        <div class="testimonial">
+            <div class="small-container">
+                <div class="row">
+                    <div class="col-3">
+
+                    </div>
+                </div>
+            </div>
+        </div>
+    
 
     <!-----------------Bootstrap JavaScript plugin--------------------->
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
