--- a/index.html
+++ b/index.html
@@ -192,10 +192,10 @@
         <div class="small-container">
             <div class="row">
                 <div class="col-2">
+                    <p>Exclusively Available On ThingStore</p>
                     <img src="images/img19.jpg" alt="Error">
                 </div>
                 <div class="col-2">
-                    <p>Exclusively Available On ThingStore</p>
                     <h1>Redmi Smart Band</h1>
                     <small>If You are looking to buy an adanced smart band for 
                         your fitness routine or to make your life more convenirnt.
@@ -217,6 +217,16 @@
                 </div>
             </div>
         </div>
+    <!--------------------------Brands-------------------------------->
+    <div class="brands">
+        <div class="small-contaniber">
+            <div class="row">
+                <div class="col-5">
+
+                </div>
+            </div>
+        </div>
+    </div>
     
 
     <!-----------------Bootstrap JavaScript plugin--------------------->
