--- a/index.html
+++ b/index.html
@@ -222,7 +222,19 @@
         <div class="small-contaniber">
             <div class="row">
                 <div class="col-5">
-
+                    <img src="images/img20.jpg" alt="">
+                </div>
+                <div class="col-5">
+                    <img src="images/img21.jpg" alt="">
+                </div>
+                <div class="col-5">
+                    <img src="images/img22.jpg" alt="">
+                </div>
+                <div class="col-5">
+                    <img src="images/img23.jpg" alt="">
+                </div>
+                <div class="col-5">
+                    <img src="images/img24.jpg" alt="">
                 </div>
             </div>
         </div>
