--- a/index.html
+++ b/index.html
@@ -239,6 +239,35 @@
             </div>
         </div>
     </div>
+    <!--------------------------Footer--------------------------------->
+    <div class="footer">
+        <div class="container">
+            <dic class="row">
+                <div class="footer-col-1">
+                    <h3>Download Out App</h3>
+                    <p>Download App For Android And IOS Mobile Phone.</p>
+                    <div class="app-logo">
+                        <img src="images/img25.png" alt="Error">
+                        <img src="images/img26.png" alt="Error">
+                    </div>
+                </div>
+                <div class="footer-col-2">
+                    <a><img src="images/img1.png" alt="" width="100px"></a>
+                    <p>Our Purpose Is To Sustainably Make The Pleasure And Benefits Of Sports Accessible To The Mant.</p>
+                </div>
+                <div class="footer-col-3">
+                    <h3>Follow Us</h3>
+                    <ul>
+                        <li>Facebook</li>
+                        <li>Twitter</li>
+                        <li>Instagram</li>
+                        <li>Youtube</li>
+                    </ul>
+                </div>
+
+            </dic>
+        </div>
+    </div>
     
 
     <!-----------------Bootstrap JavaScript plugin--------------------->
