--- a/index.html
+++ b/index.html
@@ -247,8 +247,8 @@
                     <h3>Download Out App</h3>
                     <p>Download App For Android And IOS Mobile Phone.</p>
                     <div class="app-logo">
-                        <img src="images/img25.png" alt="Error">
-                        <img src="images/img26.png" alt="Error">
+                        <img src="images/img25.PNG" alt="Error">
+                        <img src="images/img26.PNG" alt="Error">
                     </div>
                 </div>
                 <div class="footer-col-2">
